force-app/main/default/objects/Custom_Error_Log__c/Custom_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Object for logging exceptions and validations done through custom code</description>
    <label>Custom Error Log</label>
    <nameField>
        <displayFormat>CEL-{0000}</displayFormat>
        <label>Custom Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>