force-app/main/default/objects/Custom_Error_Log__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>The Apex Class which Generated the Error</description>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>