force-app/main/default/objects/Custom_Error_Log__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>The line number on which error is generated</description>
    <label>Line Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>