force-app/main/default/objects/Custom_Error_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Error message generated</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>