force-app/main/default/objects/Custom_Error_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Method of Apex class which generated the error.</description>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>