force-app/main/default/objects/Custom_Error_Log__c/fields/On__c.field-meta.xml
<CustomField>
    <fullName>On__c</fullName>
    <description>On which trigger call is the error generated</description>
    <label>On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>