force-app/main/default/objects/Custom_Error_Log__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <description>Record Url</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;RecordID__c,RecordID__c,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record</label>
    <type>Text</type>
</CustomField>