force-app/main/default/objects/Custom_Error_Log__c/fields/RecordID__c.field-meta.xml
<CustomField>
    <fullName>RecordID__c</fullName>
    <description>Error generated from a record.</description>
    <label>RecordID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>