force-app/main/default/objects/Custom_Error_Log__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who generated the error</description>
    <label>UserID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Custom_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>