force-app/main/default/objects/Custom_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>Message__c</columns>
    <columns>Method__c</columns>
    <columns>On__c</columns>
    <columns>RecordID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>